# bomi

./: .gitignore  .gitmodules  CHANGES.txt  COPYING.txt  CREDITS.txt  ICON-AUTHORS.txt  INSTALL.txt  Makefile  Makefile.in  Makefile.linux  README.md  bomi-opendvd.desktop  bomi.1  bomi.completion  bomi.desktop  bomi.sh  build-ffmpeg  build-libav  build-libchardet  build-mplayer2  build-mpv  build-mpv.in  build-sigar  changes.txt  cmplayer-opendvd.desktop  cmplayer.1  cmplayer.completion  cmplayer.desktop  cmplayer.sh  configure  copyright.txt  deploy-win  download-ffmpeg  download-libav  download-libchardet  download-mplayer2  download-mpv  fix-dep  init-mpv  install.txt  (+4 more)
.tx/: config
arch/: PKGBUILD  cmplayer.install  make-tarball
arch/git-pkgbuild/: PKGBUILD
debian/: build.sh  changelog  control  menu  rules
debian-trusty/: changelog  control
debian-utopic/: changelog  control  menu
debian/base/: control  rules
debian/trusty/: changelog  control  rules
debian/ubuntu/: control  rules
debian/utopic/: changelog  control
icons/: bomi.icns  bomi.xpm  cmplayer.xpm
rpm/: bomi.spec  cmplayer.spec
src/bomi/: Info.plist  bomi.pro  configure.pro.in  emptyskin.qml  global.cpp  gpl.html  (+6 more)
src/libchardet-1.0.1/: Changelog  INSTALL  README  acconfig.h  autogen  chardet-config.h.in  chardet-config.in  configure  configure.ac  libchardet.spec
src/libchardet-1.0.1/include/: prmem.h
src/libchardet-1.0.1/man/ko/: detect_handledata.3  detect_init.3
src/libchardet-1.0.1/patch/: original-encode-detect-1.01.patch
src/libchardet-1.0.1/src/: LangCyrillicModel.cpp  Makefile.in  chardet.cpp  chardet.h  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h
src/libchardet-1.0.1/test/: Makefile
windows/: windows.pro
(+1681 files in other folders)
